php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #22580 Cannot build when configure with dbmaker
Submitted: 2003-03-06 23:59 UTC Modified: 2003-05-01 19:40 UTC
From: clin at lion dot syscom dot com dot tw Assigned:
Status: Closed Package: ODBC related
PHP Version: 4.3.1 OS: Linux 2.2.17-21mdk
Private report: No CVE-ID: None
 [2003-03-06 23:59 UTC] clin at lion dot syscom dot com dot tw
Steps for reproduce the bug:

(1) ./configure --with-dbmaker=<DIR> and make
(2) the result is failure
(3) partial error message:

/opt0/clin/php-4.3.1/ext/odbc/php_odbc.c:1219: undefined reference to `SQLDataSources'
collect2: ld returned 1 exit status
make: *** [sapi/cli/php] Error 1


Should be caused by lack of support for SQLDataSources() in
DBMaker.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-03-07 03:07 UTC] sniper@php.net
What dbmaker version you have?

 [2003-03-07 03:13 UTC] clin at lion dot syscom dot com dot tw
Sorry, I forgot to mention. It's DBMaker3.74.
 [2003-03-19 21:24 UTC] clin at lion dot syscom dot com dot tw
According to MSDN ODBC specification, isn't it true that 
SQLDataSources() is implemented "solely by Driver Manager"? 
How come there is a php function that calls SQLDataSources()
?

I can fix a bug by ifdef and solve the compilation problem
but I am really confused about how this bug ever happens.
Did I miss anything? Could somebody tell me?
 [2003-05-01 19:40 UTC] sniper@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Aug 05 19:00:01 2026 UTC