- Fixed bug #22580 (ext/odbc compile failure with dbmaker)